Use Set.of() gives a set where contains check if argument is null